# responsaible

./: .dev.vars.example  .gitignore  .npmrc  CLAUDE.md  README.md  drizzle.config.ts  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.claude/: launch.json
agents/: .env.example  .gitignore  README.md  pyproject.toml
agents/itaily_agents/: __init__.py  claim_workgroup.py  mcp_cellar_server.py  models.py  pipeline.py  run_seed.py  tools.py  workgroups.py
data/seed/: matters.json  work-products.json
data/seed/firm-knowledge/: fk-001-transfers-playbook.md  fk-002-dpf-certification.md  fk-003-ai-act-highrisk-recruitment.md  fk-004-dsa-notice-action.md  fk-005-privileged-handling.md
docs/: ARCHITECTURE.md  CONVENTIONS.md  PROBLEM.md  TASKS.md
drizzle/: 0000_acoustic_pet_avengers.sql  0001_mature_old_lace.sql  0002_worried_avengers.sql  0003_mushy_landau.sql  0004_clear_blindfold.sql  0004_zippy_energizer.sql  0005_chief_luckman.sql  0006_lying_doctor_faustus.sql  0007_jittery_liz_osborn.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
itaily-design-system/: README.md
itaily-design-system/project/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md
itaily-design-system/project/components/core/: Avatar.d.ts  Avatar.jsx  Avatar.prompt.md  Badge.d.ts  Badge.jsx  Badge.prompt.md  Button.d.ts  Button.jsx  Button.prompt.md  Card.d.ts  Card.jsx  Card.prompt.md  Icon.d.ts  Icon.jsx  Icon.prompt.md  (+4 more)
itaily-design-system/project/guidelines/: brand-logo-backgrounds.card.html  brand-logo-concept.card.html  color-neutrals.card.html  color-status.card.html  color-surfaces.card.html  color-terracotta.card.html  radii-shadows.card.html  spacing-scale.card.html  type-body.card.html  type-display.card.html  type-serif-mono.card.html
itaily-design-system/project/tokens/: colors.css  fonts.css  spacing.css
scripts/: backfill-claim-edges.mjs  load-seed.mjs
src/: app.css  app.d.ts  hooks.server.ts
src/lib/: auth-client.ts  claim-graph.ts  format.ts  types.ts  workgroups.ts
src/lib/components/: AuditTrail.svelte  Avatar.svelte  Badge.svelte  Brand.svelte  Button.svelte  Card.svelte  ClaimFindings.svelte  ConfidenceMeter.svelte  ConfirmDialog.svelte  ContextMenu.svelte  Icon.svelte  InfoTip.svelte  Modal.svelte  QueueRow.svelte  RiskBadge.svelte  RiskSignalPanel.svelte  SourceCard.svelte  StatusBadge.svelte  SummaryOverview.svelte  SupervisoryActions.svelte  TraceTimeline.svelte  VerifyBadge.svelte
src/lib/server/: analyze.ts  audit.ts  auth.ts  cellar.ts  claims.ts  demo-users.ts  knowledge.ts  research.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/knowledge/: +page.server.ts  +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
src/routes/new/: +page.server.ts  +page.svelte
src/routes/queue/: +page.server.ts  +page.svelte
(+77 files in other folders)
