[project]
name = "itaily-agents"
version = "0.1.0"
description = "Offline Google ADK multi-agent pipeline that generates the SEED dataset for the Itaily legal-supervision console."
readme = "README.md"
# Upper bound: the google-adk -> google-genai -> pydantic stack does not yet
# import under Python 3.14 (typing._eval_type signature change). Use 3.11-3.13.
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }

dependencies = [
    # Google Agent Development Kit (ADK). Provides LlmAgent, SequentialAgent,
    # Runner, sessions, and the LiteLlm wrapper used for the Claude option.
    # Pin to a known-good major; verify the exact symbols against the installed
    # version (see README "ADK API points to verify").
    "google-adk>=1.0.0",
    # LiteLlm lets ADK talk to non-Gemini models (e.g. Anthropic Claude).
    # Only needed when ITAILY_MODEL_PROVIDER=claude.
    "litellm>=1.40.0",
    # Loads agents/.env so GOOGLE_API_KEY / ANTHROPIC_API_KEY are available.
    "python-dotenv>=1.0.0",
    # Async HTTP client used by the CELLAR + web-search tools (tools.py).
    "httpx>=0.27.0",
    # Model Context Protocol — the standalone CELLAR MCP server (mcp_cellar_server.py)
    # and ADK's MCPToolset client. Only needed when ITAILY_CELLAR_MCP=1.
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[project.scripts]
# Convenience entry point: `itaily-seed` == `python -m itaily_agents.run_seed`.
itaily-seed = "itaily_agents.run_seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["itaily_agents"]
